fix add selcted button visibility, static test fix

--- a/MediaGalleryUi/view/adminhtml/web/css/source/_module.less
+++ b/MediaGalleryUi/view/adminhtml/web/css/source/_module.less
@@ -25,6 +25,10 @@
         }
     }
 
+    .page-actions-buttons > button.no-display {
+            display: none;
+    }
+
     .media-gallery-container {
 
         .page-main-actions {
@@ -34,7 +38,7 @@
                 }
             }
 
-            & > .page-actions {
+            & > .page-actions, {
                 & > button.no-display {
                     display: none;
                 }
